--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,7 +3,7 @@
 
   position: fixed;
   background: #000000;
-  background-image: url(../../assets/home_bg_compressed.webp);
+  background-image: url(../../assets/blurred.jpeg);
   background-position: center;
   background-size: cover;
   top: 0px;
